--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,11 @@
   		<version>1.2.1.1</version>
   	</dependency>
   	<dependency>
+		<groupId>oauth.signpost</groupId>
+		<artifactId>signpost-commonshttp4</artifactId>
+		<version>1.2.1.1</version>
+	</dependency>
+  	<dependency>
 		<groupId>org.json</groupId>
 		<artifactId>json</artifactId>
 		<version>20090211</version>
@@ -28,5 +33,11 @@
 		<version>2.1_r1</version>
 		<scope>provided</scope>
 	</dependency>
+	<dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.8.1</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
